crates/gpui_tea/tests/ui/missing_child_extract.stderr
error: missing `extract`
  --> tests/ui/missing_child_extract.rs:10:5
   |
10 |     #[child(path = "child", lift = Msg::Child)]
   |     ^
